--- a/docs/de-de/modules/warenwirtschaft/pages/inventur-durchfuehren.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/inventur-durchfuehren.adoc
@@ -72,13 +72,13 @@ Einstellungen zur Inventur vornehmen:
 
 | *Artikelsuchfelder*
 |Verwende die Umschaltflächen, um festzulegen, welche Kriterien während zur Suche nach Artikeln für die Inventur genutzt werden sollen. +
-*_Hinweis:_* Diese Einstellung greift nur, wenn die Einstellung *Lagerort-Scan verpflichtend* _nicht_ aktiviert ist.
+*_Hinweis:_* Diese Einstellung greift nur, wenn die Einstellung *Verpflichtender Artikel-Scan* _nicht_ aktiviert ist.
 *Aktiviert* (icon:toggle-on[role="green"]) = Es wird möglich sein, Artikel anhand dieses Kriteriums zu suchen. +
 *_Tipp:_* Tippe und halte (icon:drag_handle[set=material]) für jedes aktivierte Suchkriterium, um die Reihenfolge der angezeigten Suchfelder anzupassen.
 
 | *Fokus auf Artikelsuchfeld*
 |Suchst du Artikel typischerweise anhand eines bestimmten Kriteriums? Tippe auf dein am häufigsten verwendetes Kriterium. Wenn du später bei der Inventur nach Artikeln suchst, wird dein Mauszeiger automatisch in diesem Feld beginnen. Natürlich ist es weiterhin möglich, den Mauszeiger manuell in einem anderen Suchfeld zu platzieren. +
-*_Hinweis:_* Diese Einstellung greift nur, wenn die Einstellung *Lagerort-Scan verpflichtend* _nicht_ aktiviert ist.
+*_Hinweis:_* Diese Einstellung greift nur, wenn die Einstellung *Verpflichtender Artikel-Scan* _nicht_ aktiviert ist.
 
 2+^| Bereich *Bestand speichern*
 
