--- a/docs/en-gb/modules/stock-management/pages/carrying-out-stocktaking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/carrying-out-stocktaking.adoc
@@ -72,13 +72,13 @@ Carrying out settings for stocktaking:
 
 | *Item search fields*
 |Use the toggle buttons to determine which criteria can be used for the item search while using the stocktaking function. +
-*_Note:_* This setting only takes effect if the *Mandatory storage location scan* setting is _not_ activated.
+*_Note:_* This setting only takes effect if the *Mandatory item scan* setting is _not_ activated.
 *Activated* (icon:toggle-on[role="green"]) = You will be able to use this criterion when searching for items. +
 *_Tip:_* Tap on (icon:drag_handle[set=material]) for each activated search criterion and drag it to the desired position to determine the order of the search fields.
 
 | *Focus on item search field*
 |Do you typically search for items using a specific criterion? Tap on the criterion that you use most frequently. When you search for items later during stocktaking, the cursor will automatically be placed in this field at the beginning. Of course, you can still place the cursor in another search field manually. +
-*_Note:_* This setting only takes effect if the *Mandatory storage location scan* setting is _not_ activated.
+*_Note:_* This setting only takes effect if the *Mandatory item scan* setting is _not_ activated.
 
 2+^| *Save stock* area
 
