--- a/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
@@ -151,14 +151,15 @@ Einstellungen vornehmen:
 *Aktiviert* (icon:toggle-on[role="green"]) = Lagerorte und Boxen _müssen_ per Scan ausgewählt werden, damit anschließend Artikel gebucht werden können. +
 *Nicht aktiviert* (icon:toggle-off[role="darkGrey"]) = Lagerorte und Boxen können manuell ausgewählt werden, indem du in der App auf sie tippst.
 
-//| *Sortierung der Aufträge*
-//|Diese Einstellung bestimmt genauer, nach welchem Kriterium Aufträge in die rollende Kommissionierung einbezogen werden sollen. +
-//*Auftrags-ID* = +
-//*Erstellungsdatum* = 
+| *Sortierung der Aufträge*
+|Diese Einstellung bestimmt genauer, nach welchem Kriterium Aufträge für die Abarbeitung innerhalb der rollenden Kommissionierung sortiert werden sollen. Wähle eine der folgenden Optionen aus: +
+*Auftrags-ID* = Aufträge werden beginnend mit der niedrigsten Auftrags-ID einbezogen. +
+*Erstellungsdatum* = Aufträge werden beginnnend mit dem ältesten Erstellungsdatum einbezogen. +
+*Zahlungseingang* = Aufträge werden beginnend mit dem ältesten Zahlungsdatum einbezogen. *_Hinweis:_* Stelle wie gewohnt sicher, dass du nur Aufträge kommissionierst und somit für den Versand vorbereitest, die vollständig bezahlt sind.
 
 2+^| Bereich *Status*
 
-| *Quellstatus*
+| [#intable-soucrce-status]*Quellstatus*
 |Welche Aufträge möchtest du picken? Wenn du die rollende Kommissionierung später nutzt, werden nur Aufträge, die sich in diesem Status befinden, auf deiner Artikelliste angezeigt. +
 *_Tipp:_* Die xref:auftraege:auftraege-verwalten.adoc#1200[Status] in dieser Dropdown-Liste verwaltest du im Backend deines plentymarkets System unter *Einrichtung » Aufträge » Status*.
 
