--- a/docs/en-gb/modules/stock-management/pages/box-picking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/box-picking.adoc
@@ -46,7 +46,7 @@ First, decide in which warehouses your warehouse staff should be able to use the
 If you are working with the function for box picking for the first time, make sure that the following settings are carried out beforehand. Otherwise, errors will occur during the process.
 
 [#300]
-=== Carrying out settings in the plentymarkets back end
+=== Configuring settings in the plentymarkets back end
 
 Before you <<#800, use box picking>>, you need to carry a few settings one time only in your plentymarkets system. For example, these settings specify which boxes are available, which warehouse technicians are in charge of box picking and when the order and box should be unlinked.
 
@@ -120,7 +120,7 @@ Open the procedure’s settings and set the *Mode* to *Box search*. This specifi
 Before you <<#800, use box picking>>, you need to carry a few settings one time only in the plentyWarehouse app. For example, these settings specify how many orders should be picked at once and how the app should react if an error occurs with any of these orders.
 
 [.instruction]
-Carrying out settings in the plentyWarehouse app:
+Configuring the settings:
 
 . xref:stock-management:installation-and-initial-setup.adoc#300[Log into plentyWarehouse].
 . Tap on the menu icon (icon:bars[role="darkGrey"]) in the top left corner.
@@ -130,7 +130,7 @@ Carrying out settings in the plentyWarehouse app:
 . Carry out the settings. Pay attention to the explanations given in <<table-pw-settings-box-picking>>.
 
 [[table-pw-settings-box-picking]]
-.Settings in the plentyWarehouse app
+.Configuring settings in the plentymarkets app
 [cols="1,3"]
 |====
 |Setting |Explanation
@@ -141,7 +141,7 @@ Carrying out settings in the plentyWarehouse app:
 *_Tip:_* You can manage the xref:stock-management:setting-up-a-warehouse.adoc#200[warehouses] displayed in this drop-down list in the *Setup » Stock » Warehouse* menu in the back end of your plentymarkets system.
 
 |[#intable-default-boxes]*Default number of boxes*
-|Each box represents one order whose items are picked. Select the number of orders you typically pick at once. When you use the function later, this number will be suggested by default. You can manually increase or decrease this number before starting box picking.
+|Each box represents one order whose items are picked. Select the number of orders you typically pick at once. When you carry out box picking later, this number will be suggested by default. You can manually increase or decrease this number before starting box picking.
 
 | *Display confirmation dialogue before redistribution*
 |If you activate this option, the app will ask you if you really want to put an item into the box every time you pick an item during box picking. You can only proceed with the next item after confirming the dialogue.
@@ -150,6 +150,12 @@ Carrying out settings in the plentyWarehouse app:
 |How do you want to select storage locations and boxes for box picking? +
 *Activated* (icon:toggle-on[role="green"]) = Storage locations and boxes _have to be_ selected by scanning them so that items can be booked afterwards. +
 *Deactivated* (icon:toggle-off[role="darkGrey"]) = Storage locations and boxes can be selected manually by tapping on them in the app.
+
+| *Sorting of orders*
+|This setting determines in more detail which orders will be sorted for processing them with the box picking function. Select one of the following options: +
+*Order ID* = Orders are sorted beginning with the lowest order ID. +
+*Creation date* = Orders are sorted beginning with the earliest creation date. +
+*Paid on* = Orders are sorted beginning with the earliest date of incoming payment. *_Note:_* As usual, make sure that you only prepare shipments for orders that have been fully paid for.
 
 2+^| *Status* area
 
