--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -606,13 +606,15 @@ Wenn die Adresse mit einem Auftrag verknüpft ist, kannst du die Adresse _nicht_
 | *Neu laden*
 |Mit einem Klick auf icon:refresh[set=material] wird der Datensatz aktualisiert.
 
-| *Rechnungsadresse ableiten*
-|Diese Funktion ist nur verfügbar, wenn es sich um einen bestehenden und keinen neuen Adressdatensatz handelt. +
-Mit einem Klick auf icon:credit_note[set=plenty] wird eine neue Rechnungsadresse auf Basis der aktuell gewählten Adresse erstellt. Um eine neue Adresse mit einer neuen ID zu erstellen, müssen Änderungen an der neuen Rechnungsadresse vorgenommen werden.
+| *Neue Rechnungsadresse ableiten*
+|Diese Funktion ist nur verfügbar, wenn es sich um einen bestehenden Adressdatensatz handelt. +
+Mit einem Klick auf icon:credit_note[set=plenty] wird eine neue Rechnungsadresse auf Basis der aktuell gewählten Adresse erstellt. Die Dropdown-Liste *Rechnungsadresse* wird auf *Ja* gestellt. Die Dropdown-Liste *Lieferadresse* wird auf *Nein* gestellt. +
+*_Hinweis:_* Damit eine neue Adresse mit einer neuen ID erstellt wird, müssen Änderungen an der neuen Rechnungsadresse vorgenommen werden.
 
-| *Lieferadresse ableiten*
-|Diese Funktion ist nur verfügbar, wenn es sich um einen bestehenden und keinen neuen Adressdatensatz handelt. +
-Mit einem Klick auf icon:delivery_note[set=plenty] wird eine neue Lieferadresse auf Basis der aktuell gewählten Adresse erstellt. Um eine neue Adresse mit einer neuen ID zu erstellen, müssen Änderungen an der neuen Lieferadresse vorgenommen werden.
+| *Neue Lieferadresse ableiten*
+|Diese Funktion ist nur verfügbar, wenn es sich um einen bestehenden Adressdatensatz handelt. +
+Mit einem Klick auf icon:delivery_note[set=plenty] wird eine neue Lieferadresse auf Basis der aktuell gewählten Adresse erstellt. Die Dropdown-Liste *Lieferadresse* wird auf *Ja* gestellt. Die Dropdown-Liste *Rechnungsadresse* wird auf *Nein* gestellt. +
+*_Hinweis:_* Damit eine neue Adresse mit einer neuen ID erstellt wird, müssen Änderungen an der neuen Lieferadresse vorgenommen werden.
 
 2+^| *Neue Adresse* / *Adresse* + _ID_
 
