Added chapter for oder referrers

--- a/docs/de-de/modules/maerkte/pages/basic-price-search-engine.adoc
+++ b/docs/de-de/modules/maerkte/pages/basic-price-search-engine.adoc
@@ -7,9 +7,16 @@
 :page-aliases: .adoc
 :basic-price-search-engine:
 
+:price-search-engine: Basic Price Search Engine
+
 Mit dem Format *Basic Price Search Engine* kannst du Artikeldaten exportieren, um sie für eine beliebige Preissuchmaschine zu exportieren. Du kannst darin Artikeldaten zuordnen, die die meisten Preissuchmaschinen erwarten.
 
 TIP: Bevor du den Export einrichtest, prüfe im link:https://marketplace.plentymarkets.com/plugins/sales/preisportale[plentyMarketplace^], ob plentymarkets oder ein Drittunternehmen eine direkte Schnittstelle zu der Preissuchmaschine anbietet, auf der du deine Produkte verkaufen möchtest.
+
+[#auftragsherkunft-erstellen]
+== Auftragsherkunft erstellen
+
+include::partial$create-order-referrer.adoc[]
 
 [#100-0]
 == _Möglichkeit 1:_ Exportformat BasicPriceSearchEngine-Plugin _(alte Methode)_
