--- a/docs/de-de/modules/maerkte/pages/belboon.adoc
+++ b/docs/de-de/modules/maerkte/pages/belboon.adoc
@@ -4,11 +4,17 @@
 :description: Multi-Channel in plentymarkets: Richte die Artikeldatenübertragung zum Affiliate-Netzwerk belboon in deinem plentymarkets System ein.
 :id: H7VKSL8
 
+:belboon:
 :price-search-engine: belboon
 :plugin-name: ElasticExportBelboonDE
 :plugin-link: https://marketplace.plentymarkets.com/plugins/channels/preisportale/elasticexportbelboonde_4759
 
 Das Affiliate-Netzwerk belboon ist spezialisiert auf die Umsetzung deiner Performance-Marketing-Maßnahmen.
+
+[#auftragsherkunft-erstellen]
+== Auftragsherkunft erstellen
+
+include::partial$create-order-referrer.adoc[]
 
 [#old-export]
 == _Möglichkeit 1:_ Exportformat ElasticExportBelboonDE-Plugin _(alte Methode)_
