--- a/docs/de-de/modules/maerkte/partials/exportformate.adoc
+++ b/docs/de-de/modules/maerkte/partials/exportformate.adoc
@@ -100,7 +100,10 @@ a| Wählen, welche Artikel beim Export übertragen werden sollen. Dazu einen ode
 
 | *Auftragsherkunft*
 | Aus der Dropdown-Liste die Auftragsherkunft wählen, die beim Auftragsimport zugeordnet werden soll. +
-→ Die Produkt-URL wird um die gewählte Auftragsherkunft erweitert, damit die Verkäufe später analysiert werden können.
+→ Die Produkt-URL wird um die gewählte Auftragsherkunft erweitert, damit die Verkäufe später analysiert werden können. +
+ifdef::awin,basic-price-search-engine,beezup,belboon,econda,KUPONA,mybestbrands,shopzilla[]
+*_Hinweis:_* Für {price-search-engine} ist noch keine Auftragsherkunft in deinem plentymarkets System vorhanden. Du musst die Auftragsherkunft für {price-search-engine} deshalb <<#auftragsherkunft-erstellen, manuell im Menü *Einrichtung » Aufträge » Auftragsherkunft* erstellen.>>
+endif::awin,basic-price-search-engine,beezup,belboon,econda,KUPONA,mybestbrands,shopzilla[]
 
 | *Marktplatzkonto*
 | Marktplatzkonto aus der Dropdown-Liste wählen.
