--- a/docs/de-de/modules/maerkte/pages/beezup.adoc
+++ b/docs/de-de/modules/maerkte/pages/beezup.adoc
@@ -16,6 +16,11 @@
 
 BeezUP ist ein Tool zur Verwaltung und Optimierung der Präsentation deiner Artikel in Preisportalen, Marktplätzen und bei Affiliate-Diensten. Um BeezUP in plentymarkets einzurichten, registriere dich zunächst bei link:http://www.beezup.de[www.beezup.de^].
 
+[#auftragsherkunft-erstellen]
+== Auftragsherkunft erstellen
+
+include::partial$create-order-referrer.adoc[]
+
 [#old-export]
 == _Möglichkeit 1:_ Exportformat BeezUp-Plugin _(alte Methode)_
 
@@ -169,7 +174,7 @@ Artikeldaten werden über ein Marktplatz-Format exportiert. Um deine Artikel zu 
 
 include::partial$catalogue-new-to-text.adoc[]
 
-:catalogue-template-name: billiger.de
+:catalogue-template-name: BeezUp
 :format-item-new:
 
 include::partial$catalogue-creation.adoc[]
@@ -195,7 +200,7 @@ include::partial$beezup-recommended-mappings.adoc[]
 [#filter-export]
 === _Optional:_ Nur bestimmte Artikel exportieren
 
-:market: billiger.de
+:market: BeezUp
 
 include::partial$catalogue-filters.adoc[]
 
@@ -209,7 +214,7 @@ include::partial$catalogue-settings.adoc[]
 ==== Katalog aktivieren
 
 :interval:
-:market: billiger.de
+:market: BeezUp
 
 include::partial$catalogue-activation.adoc[]
 
