--- a/docs/de-de/modules/maerkte/pages/econda.adoc
+++ b/docs/de-de/modules/maerkte/pages/econda.adoc
@@ -16,6 +16,11 @@
 
 econda bietet eine Controlling-Lösung zur umfassenden Analyse und Optimierung von Webshops.
 
+[#auftragsherkunft-erstellen]
+== Auftragsherkunft erstellen
+
+include::partial$create-order-referrer.adoc[]
+
 [#old-export]
 == _Möglichkeit 1:_ Exportformat EcondaDE-Plugin _(alte Methode)_
 
@@ -110,7 +115,7 @@ Artikeldaten werden über ein Marktplatz-Format exportiert. Um deine Artikel zu 
 
 include::partial$catalogue-new-to-text.adoc[]
 
-:catalogue-template-name: billiger.de
+:catalogue-template-name: econda
 :format-item-new:
 
 include::partial$catalogue-creation.adoc[]
@@ -118,7 +123,7 @@ include::partial$catalogue-creation.adoc[]
 [#filter-export]
 === _Optional:_ Nur bestimmte Artikel exportieren
 
-:market: billiger.de
+:market: econda
 
 include::partial$catalogue-filters.adoc[]
 
@@ -150,7 +155,7 @@ include::partial$catalogue-settings.adoc[]
 ==== Katalog aktivieren
 
 :interval:
-:market: billiger.de
+:market: econda
 
 include::partial$catalogue-activation.adoc[]
 
