--- a/docs/de-de/modules/maerkte/partials/create-order-referrer.adoc
+++ b/docs/de-de/modules/maerkte/partials/create-order-referrer.adoc
@@ -25,8 +25,8 @@ Auftragsherkunft erstellen:
 |Einstellung |Erläuterung
 
 | *ID*
-|Jede Auftragsherkunft erhält eine eigene ID. Diese wird automatisch vom System zugewiesen und ist nicht änderbar. Für manuelle Herkünfte stehen die IDs im Bereich 9-100 zur Verfügung. Die IDs 1-8 sowie die IDs ab 101 sind von fest im System hinterlegten Auftragsherkünften besetzt. Unterherkünfte sind an dezimalen IDs zu erkennen, zum Beispiel 2.08 für eBay Germany. +
-_Hinweis_: Wenn alle freien IDs für manuell angelegte Auftragsherkünfte vergeben sind, ist die Schaltfläche *Neu* (icon:plus-square[role="green"]) nicht mehr sichtbar, da keine neuen Herkünfte hinzugefügt werden können.
+|Jede Auftragsherkunft erhält eine eigene ID. Diese wird automatisch vom System zugewiesen und ist nicht änderbar. Für Herkünfte, die du selbst erstellst, stehen die IDs im Bereich 9-100 zur Verfügung. Die IDs 1-8 sowie die IDs ab 101 sind von fest im System hinterlegten Auftragsherkünften besetzt. Unterherkünfte sind an dezimalen IDs zu erkennen, zum Beispiel 2.08 für eBay Germany. +
+_Hinweis_: Wenn alle freien IDs für manuell erstellte Auftragsherkünfte vergeben sind, ist die Schaltfläche *Neu* (icon:plus-square[role="green"]) nicht mehr sichtbar, da keine neuen Herkünfte hinzugefügt werden können.
 
 | *Name*
 |Der hier eingetragene Name für die Herkunft wird im System angezeigt, zum Beispiel bei der Auftragssuche. Der Name kann hier jederzeit geändert werden.
