--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -595,7 +595,28 @@ If the address is linked with an order, you _cannot_ edit the address. You can, 
 |====
 |Setting |Explanation
 
-2+^| *New address*
+2+^| *Toolbar*
+
+| *Save*
+|Click on icon:[set=material] to save the changes.
+
+| *Delete*
+|By clicking on icon:delete[set=material], a window with a security question appears. You need to confirm your decision to delete the address.
+
+| *Reload*
+|Click on icon:refresh[set=material] to update the data record.
+
+| *Derive new invoice address*
+|This function is only available if it is an existing address data record. +
+By clicking on icon:credit_note[set=plenty], a new invoice address based on the currently selected address is created. The drop-down list *Invoice address* changes to *Yes*. The drop-down list *Delivery address* changes to *No*. +
+*_Note:_* In order to create a new address with a new ID, changes have to be made to the data fields of the new invoice address.
+
+| *Derive new delivery address*
+|This function is only available if it is an existing address data record. +
+By clicking on icon:delivery_note[set=plenty], a new delivery address based on the currently selected address is created. The drop-down list *Delivery address* changes to *Yes*. The drop-down list *Invoice address* changes to *No*. +
+*_Note:_* In order to create a new address with a new ID, changes have to be made to the data fields of the new delivery address.
+
+2+^| *New address* / *Address* + _ID_
 
 | *Invoice address*
 a| Which type does the new address have? Select one of the following options: +
