--- a/docs/en-gb/modules/markets/pages/kupona.adoc
+++ b/docs/en-gb/modules/markets/pages/kupona.adoc
@@ -1,9 +1,10 @@
 = KUPONA
 :author: team-plenty-channel
-:keywords: KUPONA, KUPONA
+:keywords: Kupona, Kupona
 :description: Multi-Channel in plentymarkets: Set up the item data export to KUPONA in your plentymarkets system.
 :id: XL2DXPW
 
+:KUPONA:
 :price-search-engine: KUPONA
 :plugin-name: KUPONA
 :plugin-link: https://marketplace.plentymarkets.com/en/plugins/channels/preisportale/elasticexportkuponade_4756
@@ -14,6 +15,11 @@ include::partial$plugin-download.adoc[]
 == Registering with Kupona.de
 
 Kupona.de is an agency for online performance marketing. It is active in the fields of display performance advertising, retargeting, affiliate marketing and product data marketing.
+
+[#create-order-referrer]
+== Creating an order referrer
+
+include::partial$create-order-referrer.adoc[]
 
 [#200]
 == Setting up the data format KuponaDE-Plugin in plentymarkets
@@ -40,7 +46,7 @@ include::markets:partial$download_export-file.adoc[]
 [[columns-export-file-kupona]]
 .Available columns of the export file for the export format *KuponaDE-Plugin*
 [cols="1,3a"]
-|====
+|===
 | Column header
 | Explanation
 
@@ -104,7 +110,7 @@ include::markets:partial$download_export-file.adoc[]
 | grundpreis
 | The *unit price information* in the format `price / unit` +
 *_Example:_* 10.00 EUR / kilogram
-|====
+|===
 
 [#400]
 == License
