--- a/docs/en-gb/modules/markets/pages/awin.adoc
+++ b/docs/en-gb/modules/markets/pages/awin.adoc
@@ -12,6 +12,11 @@
 
 Awin.com (formerly zanox.de) offers performance-based online and affiliate marketing.
 
+[#create-order-referrer]
+== Creating an order referrer
+
+include::partial$create-order-referrer.adoc[]
+
 [#item-export]
 == Exporting item data
 
@@ -59,7 +64,7 @@ include::markets:partial$download_export-file.adoc[]
 [[columns-export-file-awin]]
 .Available columns of the export file for the export format *AwinCOM-Plugin*
 [cols="1,3a"]
-|====
+|===
 | Column header | Explanation
 
 |prod_number
@@ -109,7 +114,7 @@ include::markets:partial$download_export-file.adoc[]
 
 |base_price_unit
 |The unit based on the base_price.
-|====
+|===
 
 [#catalogue-export]
 === _Alternative 2:_ Catalogue export _(recommended method)_
@@ -183,7 +188,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 [[elastic-export-catalogue-mappings]]
 .Columns and data fields
 [cols="1,1"]
-|====
+|===
 |Column in elastic export |Data field in catalogue
 
 | prod_number
@@ -224,5 +229,4 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 
 | shipping_costs
 | Shipping costs
-
-|====
+|===
