--- a/docs/de-de/modules/warenwirtschaft/pages/artikel-und-lagerorte.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/artikel-und-lagerorte.adoc
@@ -108,11 +108,16 @@ Eigenschaften für Varianten werden erst in plentyWarehouse angezeigt, wenn du i
 Bestand::
 +
 --
-* Name des Lagerorts, auf dem sich die gefundene Variante aktuell befindet
-* Lager, in dem sich die gefundene Variante aktuell befindet
+* Name des Lagerorts, auf dem sich die Variante aktuell befindet
+* Lager, in dem sich die Variante aktuell befindet
 * Menge (xref:warenwirtschaft:warenbestaende-verwalten.adoc#100[hier: physischer Warenbestand]), in der die Variante aktuell vorrätig ist
 --
 ====
+
+[#350]
+=== Shortcuts in der Artikelansicht nutzen
+
+
 
 [#400]
 == Lagerorte suchen
