--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -542,10 +542,9 @@ Eine Quelle für Import aktivieren::
 +
 --
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
-. Klicke alternativ auf *Zeile aktivieren* (icon:toggle-off[role="red"]) am rechten Rand, um Zeilen für den Import einzeln zu aktivieren.
-. Klicke links neben der Quelle auf die Umschaltfläche. +
-* icon:toggle_off[set=material, role="darkGrey"] = Die Quelle ist inaktiv. Beim Import wird diese Quelle nicht berücksichtigt. +
-* icon:toggle_on[set=material, role="blue"] = Die Quelle ist aktiv. Beim Import wird diese Quelle berücksichtigt.
+. Klicke links neben der Quelle auf die Umschaltfläche *Zeile aktivieren*. +
+* icon:toggle_off[set=material, role="darkGrey"] = Die Quelle ist inaktiv. Die Quelle wird beim Import nicht berücksichtigt. +
+* icon:toggle_on[set=material, role="blue"] = Die Quelle ist aktiv. Beim Import werden die Daten dieser Quelle importiert.
 . *Speichere* (icon:save[set=material, role="green"]) die Einstellungen.
 --
 
@@ -556,9 +555,9 @@ Mehrere oder alle Quellen für Import aktivieren::
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
 . Setze ganz links ein Häkchen bei allen Quellen, die du beim Import berücksichtigen möchtest. +
 *_Tipp:_* Klicke auf das Kontrollkästchen ganz oben, um bei allen Quellen der Zuordnung gleichzeitig ein Häkchen zu setzen.
-. Klicke oben in der Symbolleiste auf *Alle aktivieren* (icon:power-off[role="green"]). +
+. Klicke oben in der Symbolleiste auf *Alle aktivieren* (icon:power-off[role="darkPurple"]). +
 → Alle gewählten Quellen werden aktiviert. +
-*_Tipp:_* Genauso kannst du mit *Alle deaktivieren* (icon:power-off[role="red"]) mehrere oder alle Quellen auf einmal deaktivieren.
+*_Tipp:_* Genauso kannst du mit *Alle deaktivieren* (icon:power-off[role="darkPurple"]) mehrere oder alle Quellen auf einmal deaktivieren.
 . *Speichere* (icon:save[set=material, role="green"]) die Einstellungen.
 --
 ====
