fix: add otto changelog

--- a/docs/de-de/modules/changelog/pages/2022-06-01.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-06-01.adoc
@@ -55,6 +55,20 @@ image:changelog:warehouse2.png[width=640]
 +
 image:changelog:warehouse3.png[width=640]
 
+'''
+
+[discrete]
+== Geändert
+
+Folgende Änderungen wurden in den letzten 7 Tagen auf {version} veröffentlicht.
+
+[discrete]
+=== OTTO
+
+:otto-master-date: 27.05.2022
+:otto-master-link: https://forum.plentymarkets.com/uploads/short-url/tl39l7Y1743VWu7mWTR72vM2AZc.xlsx
+
+include::partial$otto-master-file.adoc[]
 
 '''
 
