ADD more work to the item faq page

--- a/docs/de-de/modules/daten/pages/praxisbeispiel-elasticsync-kategorien.adoc
+++ b/docs/de-de/modules/daten/pages/praxisbeispiel-elasticsync-kategorien.adoc
@@ -24,22 +24,27 @@ Diese Seite setzt voraus, dass du bereits eine xref:artikel:kategorien.adoc#100[
 
 Stell dir mal vor, du verkaufst Kleidung in deinem Webshop. Du bist ganz neu bei plentymarkets und möchtest alle deine Kategoriedaten auf einmal importieren. Du willst deine Kategorien wie folgt strukturieren:
 
-[cols="3*^", grid=cols, frame=none, stripes=none]
+[cols="1a,1a,1a", grid=cols, frame=none, stripes=none]
 |===
 
-a| * Damen
+|
+* Damen
 ** Accessoires
 ** Schuhe
 ** Bekleidung
 *** Jeans
 *** Tops
-a| * Herren
+
+|
+* Herren
 ** Accessoires
 ** Schuhe
 ** Bekleidung
 *** Jeans
 *** Tops
-a| * Kinder
+
+|
+* Kinder
 ** Accessoires
 ** Schuhe
 ** Bekleidung
