--- a/docs/en-gb/modules/data/pages/practical-example-elasticsync-categories.adoc
+++ b/docs/en-gb/modules/data/pages/practical-example-elasticsync-categories.adoc
@@ -24,22 +24,27 @@ This page assumes that you’ve already thought up a xref:item:categories.adoc#1
 
 Imagine you sell clothing in your online store. You’re new to plentymarkets and you want to import all of your category data at once. You want to structure your categories like so:
 
-[cols="3*^", grid=cols, frame=none, stripes=none]
+[cols="1a,1a,1a", grid=cols, frame=none, stripes=none]
 |====
 
-a| * Women
+|
+* Women
 ** Accessoires
 ** Shoes
 ** Clothing
 *** Jeans
 *** Tops
-a| * Men
+
+|
+* Men
 ** Accessoires
 ** Shoes
 ** Clothing
 *** Jeans
 *** Tops
-a| * Kids
+
+|
+* Kids
 ** Accessoires
 ** Shoes
 ** Clothing
