add plugin updates

--- a/docs/de-de/modules/changelog/pages/2022-06-01.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-06-01.adoc
@@ -120,9 +120,121 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/formatdesigner_6483[FormatDesigner^]
+|1.1.3
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportshoppingcom_4755[Shopping.com^]
+|1.0.16
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportcheck24de_4730[CHECK24^]
+|1.3.1
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportcdiscountcom_4738[Cdiscount.com^]
+|1.1.0
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourceresfashionadvanced_5403[Fashion PRO Theme^]
+|5.1.1
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportidealode_4723[idealo.de^]
+|3.3.30
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportbasicpricesearchengine_4777[Basic Price Search Engine^]
+|1.1.5
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportschuhede_4744[schuhe.de^]
+|1.1.5
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportshopping24de_4734[shopping24.de^]
+|1.0.23
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportfashionde_4742[Fashion.de^]
+|1.0.14
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportgeizhalsde_4743[Geizhals.de^]
+|1.1.8
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportkaufluxde_4737[kauflux.de^]
+|1.1.9
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportkelkoode_5041[Kelkoo.de^]
+|1.0.9
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportkuponade_4756[KUPONA^]
+|1.0.14
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportmybestbrandsde_4731[MY BEST BRANDS^]
+|1.0.17
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportshippingprofiles_4747[plentymarkets Versandprofile^]
+|1.0.12
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportshopzillade_4770[shopzilla.de^]
+|1.1.10
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexporttracdelightcom_4771[tracdelight^]
+|1.0.14
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexporttreepodiacom_4776[treepodia.com^]
+|1.0.14
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexporttwengacom_4746[Twenga^]
+|1.1.9
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportawincom_4762[Awin.com^]
+|1.0.12
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportbeezup_4768[BeezUp^]
+|1.1.10
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportbelboonde_4759[belboon.com^]
+|1.1.11
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportcriteo_5229[criteo^]
+|1.0.8
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportecondade_4774[econda^]
+|1.0.11
+|-
+
+|link:https://marketplace.plentymarkets.com/enderecoaddressautocomplete_6622[Endereco Address Autocomplete^]
+|2.1.1
+|-
+
+|link:https://marketplace.plentymarkets.com/woocommerce_5102[woocommerce.com^]
+|3.0.5
+|-
+
+|link:https://marketplace.plentymarkets.com/dhlshipping_4871[DHL Shipping (Versenden)^]
+|3.1.20
+|-
+
+|link:https://marketplace.plentymarkets.com/prepayment_4758[Vorkasse^]
+|3.0.7
+|-
 
 |===
 
