--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -198,7 +198,7 @@ Importoptionen festlegen:
 → Die Ansicht *Einstellungen* wird geöffnet.
 . Wechsele in die Ansicht *Abgleich*.
 . Lege die Importoptionen fest. Beachte dazu die Erläuterungen in <<tabelle-Sync-Importoptionen>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. Speichere (icon:save[role="green"]) die Einstellungen.
 
 [[tabelle-Sync-Importoptionen]]
 .Importoptionen für Importe
@@ -249,7 +249,7 @@ Abgleichfelder festlegen:
 . Wechsele in die Ansicht *Abgleich*.
 . Nimm die Einstellungen vor. +
 *_Tipp:_* Jeder xref::page$import-typen.adoc#[Import-Typ hat andere Abgleichfelder].
-. *Speichere* (icon:save[set=material, role="darkGrey"]) die Einstellungen.
+. Speichere (icon:save[set=material, role="darkGrey"]) die Einstellungen.
 
 // TODO: Beispiel einfügen
 
@@ -257,6 +257,34 @@ Abgleichfelder festlegen:
 == Zuordnungen vornehmen
 
 Mit den Zuordnungen legst du fest, welche Spalten deiner Datei in welchen Datenfeldern in plentymarkets gespeichert werden sollen. Ohne Zuordnungen können also keine Daten importiert werden. Neue Zuordnungen erstellst du im Tab *Zuordnung*. Für jede neue Zuordnung wird automatisch eine Position vergeben, die bei Bedarf im Tab *Einstellungen* angepasst werden kann.
+
+[#understand-mappings]
+=== Zuordnungen verstehen
+
+*_Was ist eine Zuordnung?_*
+
+Mit der Zuordnung legst du fest, welche Daten der Importdatei in welchen plentymarkets Datenfeldern gespeichert werden.
+
+In der Zuordnung ordnest du also die Quellen deiner Importdatei den plentymarkets Datenfeldern zu, in die die Daten importiert werden sollen.
+
+Du musst nicht alle Quellen deiner Importdatei zuordnen, sondern nur die, die du tatsächlich importieren möchtest.
+
+*_Was ist eine Quelle?_*
+
+Bei CSV-Dateien ist jede Spalte eine Quelle. TXT-Dateien sind zwar anders aufgebaut, aber auch hier ist es am einfachsten, sich die darin enthaltenen Daten als Spalten vorzustellen.
+
+image::daten:import-mapping-colour.png[]
+
+*_Ablauf:_*
+
+. Du erstellst die Zuordnung. (<<#create-mappings, Wie?>>)
+. Du ordnest die Quellen deiner Importdatei den plentymarkets Datenfeldern zu, in die die Daten importiert werden sollen. (<<#do-mappings, Wie?>>) +
+*_Tipp:_* Optional hast du auch die Möglichkeit, die Daten der Importdatei beim Import auf verschiedene Arten zu ändern:
+  * Du legst einen eigenen Wert fest. Damit speicherst du für ein plentymarkets Datenfeld für alle Datensätze denselben Wert. (<<#own-value, Wie?>>)
+  * Du verwendest einen regulären Ausdruck, um die Daten der Quelle umzustellen. (<<#1520, Wie?>>)
+  * Du verwendest eine mathematische Berechnung, um die Zahlenwerte der Quelle beim Import neu zu berechnen. (<<#formula, Wie?>>)
+  * Du verwendest eigene Zuordnungen, um Werte einer Quelle beim Import durch andere Werte zu ersetzen. (<<#1520a, Wie?>>)
+. Du aktivierst die Quellen, die beim Import berücksichtigt werden sollen. (<<#1510, Wie?>>)
 
 [#create-mappings]
 === Zuordnung erstellen
@@ -301,8 +329,9 @@ image::daten:import-mapping-colour.png[]
 [.instruction]
 Datenfelder zuordnen:
 
+. Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
 . Wähle für jede Spalte, die importiert werden soll, ein plentymarkets Datenfeld.
-. *Speichere* (icon:save[set=material, role="darkGrey"]) die Zuordnungen.
+. Speichere (icon:save[set=material, role="darkGrey"]) die Zuordnungen.
 
 [#own-value]
 === Benutzerdefinierte Zuordnung: Eigener Wert
@@ -329,7 +358,7 @@ Eigenen Wert zuordnen:
 → Die Quelle *Eigener Wert* ist standardmäßig gewählt.
 . Gib in das Feld *Wert* die Informationen ein, die für alle Datensätze des Imports in das plentymarkets Datenfeld geschrieben werden sollen.
 . Wähle das plentymarkets Datenfeld, in das der Wert importiert werden soll.
-. *Speichere* (icon:save[set=material, role="darkGrey"]) die Zuordnung.
+. Speichere (icon:save[set=material, role="darkGrey"]) die Zuordnung.
 
 [#1520]
 === Benutzerdefinierte Zuordnung: Reguläre Ausdrücke
@@ -461,7 +490,7 @@ Eigene Zuordnung festlegen:
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
 . Wähle im Dropdown-Menü des Felds *Quelle* die Option *Eigene Zuordnung*.
 . Fülle die Felder aus. Beachte dazu die Erläuterungen in <<tabelle-eigene-zuordnung>>.
-. *Speichere* (icon:save[set=material, role="darkGrey"]) die Einstellungen.
+. Speichere (icon:save[set=material, role="darkGrey"]) die Einstellungen.
 
 [[tabelle-eigene-zuordnung]]
 .Eigene Zuordnung
@@ -545,7 +574,7 @@ Eine Quelle für Import aktivieren::
 . Klicke links neben der Quelle auf die Umschaltfläche *Zeile aktivieren*. +
 * icon:toggle_off[set=material, role="darkGrey"] = Die Quelle ist inaktiv. Die Quelle wird beim Import nicht berücksichtigt. +
 * icon:toggle_on[set=material, role="blue"] = Die Quelle ist aktiv. Beim Import werden die Daten dieser Quelle importiert.
-. *Speichere* (icon:save[set=material, role="green"]) die Einstellungen.
+. Speichere (icon:save[set=material, role="green"]) die Einstellungen.
 --
 
 Mehrere oder alle Quellen für Import aktivieren::
@@ -558,7 +587,7 @@ Mehrere oder alle Quellen für Import aktivieren::
 . Klicke oben in der Symbolleiste auf *Alle aktivieren* (icon:power-off[role="darkPurple"]). +
 → Alle gewählten Quellen werden aktiviert. +
 *_Tipp:_* Genauso kannst du mit *Alle deaktivieren* (icon:power-off[role="darkPurple"]) mehrere oder alle Quellen auf einmal deaktivieren.
-. *Speichere* (icon:save[set=material, role="green"]) die Einstellungen.
+. Speichere (icon:save[set=material, role="green"]) die Einstellungen.
 --
 ====
 
@@ -581,27 +610,24 @@ Zuordnung aktivieren/deaktivieren:
 [#1611]
 == Importdaten filtern
 
-Mithilfe von Filtern kannst du die Daten eingrenzen, die importiert werden. Die Filter findest du im Bereich *Zuordnung*.
-
-[NOTE]
-.Mehrere Filter sind durch "Und" verknüpft
-====
-Wenn du mehrere Filter verwendest, werden nur Datensätze importiert, auf die alle Filter zutreffen. Es handelt sich also um eine Und-Verknüpfung der Filter.
-====
+Mit Filtern kannst du die Daten eingrenzen, die importiert werden. Die Filter findest du in der Ansicht *Zuordnung*.
 
 [.instruction]
 Filter hinzufügen:
 
 . Öffne das Menü *Daten » Import » [Import öffnen] » [Zuordnung öffnen]*.
 . Klicke in der Symbolleiste auf *Filter* (icon:filter[role="yellow"]).
-. Wähle die Spalte aus deiner Datei, die du filtern möchtest.
-. Wähle einen Operator.
+. Klicke auf *icon:plus[set=material, role="darkgrey"] *Filter*. +
+→ Eine neue Zeile wird eingeblendet.
+. Wähle die *Quelle* aus deiner Datei, die du filtern möchtest.
+. Wähle, welche *Regel* angewendet werden soll.
 . Gib einen Wert ein.
-. Klicke auf *Filter hinzufügen* (icon:plus-square[role="green"]). +
-→ Der Filter wird gespeichert.
-. Füge bei Bedarf weitere Filter hinzu. +
-→ Nur die Daten, auf die alle hinzugefügten Filter zutreffen, werden importiert.
-
+. Wähle einen Operator. Dieser Operator entscheidet darüber, wie mehrere Filter kombiniert werden. +
+*_Wichtig:_* Wenn du den Operator *Und* wählst, werden nur Datensätze importiert, auf die *_alle_* Filter zutreffen.
+. Füge bei Bedarf weitere Filter hinzu.
+. Speichere (icon:save[set=material, role="green"]) die Einstellungen. +
+→ Die Filter werden gespeichert.
+→ Nur die Daten werden importiert, auf die diese Filterregeln zutreffen.
 
 //[#1620]
 //== Report zu einem Import
