--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -6,7 +6,7 @@
 
 Diese Handbuchseite beschreibt den Datenimport in plentymarkets mit dem Import-Tool. Ein Import ist ratsam, wenn du zum Beispiel neue Artikel, Kontakte oder Lagerbestände in dein plentymarkets System einpflegen möchtest und die Daten schon digital vorliegen. Du kannst Daten manuell oder automatisiert importieren.
 
-TIP: Du kennst das Import-Tool noch nicht? Dann xref::page$import-introduction.adoc#[mache dich zuerst mit dem Tool vertraut].
+TIP: Du kennst das Import-Tool noch nicht? Dann xref::daten:import-introduction.adoc#[mache dich zuerst mit dem Tool vertraut].
 
 [#1700]
 == Grundeinrichtung: Datenimport mit Assistenten durchführen
@@ -271,7 +271,7 @@ Du musst nicht alle Quellen deiner Importdatei zuordnen, sondern nur die, die du
 
 *_Was ist eine Quelle?_*
 
-Bei CSV-Dateien ist jede Spalte eine Quelle. TXT-Dateien sind zwar anders aufgebaut, aber auch hier ist es am einfachsten, sich die darin enthaltenen Daten als Spalten vorzustellen.
+Bei CSV-Dateien ist jede Spalte eine Quelle. TXT-Dateien sind zwar anders aufgebaut. Aber auch hier ist es am einfachsten, sich die darin enthaltenen Daten als Spalten vorzustellen.
 
 image::daten:import-mapping-colour.png[]
 
