Added translation for shopzilla

--- a/docs/de-de/modules/maerkte/pages/shopzilla.adoc
+++ b/docs/de-de/modules/maerkte/pages/shopzilla.adoc
@@ -14,7 +14,7 @@ include::partial$plugin-download.adoc[]
 [#100]
 == Bei shopzilla.de registrieren
 
-shopzilla ist eine Preisvergleichsplattform. Um das Plugin für shopzilla in plentymarkets einzurichten, musst du dich zunächst bei link:http://www.shopzilla.de/[shopzilla^] registrieren.
+shopzilla ist eine Preisvergleichsplattform. Um shopzilla in plentymarkets einzurichten, musst du dich zunächst bei link:http://www.shopzilla.de/[shopzilla^] registrieren.
 
 [#auftragsherkunft-erstellen]
 == Auftragsherkunft erstellen
