Added chapter for oder referrers (#546)
* Added chapter for oder referrers

* Update create-order-referrer.adoc

* Added translations

* Added translations

* Added translation for shopzilla

--- a/docs/de-de/modules/maerkte/pages/shopzilla.adoc
+++ b/docs/de-de/modules/maerkte/pages/shopzilla.adoc
@@ -4,6 +4,7 @@
 :description: Multi-Channel in plentymarkets: Richte die Artikeldatenübertragung zum Preisportal Shopzilla in deinem plentymarkets System ein.
 :id: MJMGUTY
 
+:shopzilla:
 :price-search-engine: shopzilla
 :plugin-name: shopzilla
 :plugin-link: https://marketplace.plentymarkets.com/plugins/channels/preisportale/elasticexportshopzillade_4770
@@ -13,7 +14,12 @@ include::partial$plugin-download.adoc[]
 [#100]
 == Bei shopzilla.de registrieren
 
-shopzilla ist eine Preisvergleichsplattform. Um das Plugin für shopzilla in plentymarkets einzurichten, musst du dich zunächst bei link:http://www.shopzilla.de/[shopzilla^] registrieren.
+shopzilla ist eine Preisvergleichsplattform. Um shopzilla in plentymarkets einzurichten, musst du dich zunächst bei link:http://www.shopzilla.de/[shopzilla^] registrieren.
+
+[#auftragsherkunft-erstellen]
+== Auftragsherkunft erstellen
+
+include::partial$create-order-referrer.adoc[]
 
 [#200]
 == Das Format ShopzillaDE-Plugin in plentymarkets einrichten
