Fixed include path

--- a/docs/en-gb/modules/markets/pages/shopzilla.adoc
+++ b/docs/en-gb/modules/markets/pages/shopzilla.adoc
@@ -147,4 +147,4 @@ The *sales price* of the variation.
 
 :license-link: https://github.com/plentymarkets/plugin-elastic-export-shopzilla-de/blob/master/LICENSE.md
 
-include::partial$plugin-lizenz.adoc[]
+include::partial$plugin-license.adoc[]
