--- a/docs/de-de/modules/maerkte/partials/ebay-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/ebay-faq.adoc
@@ -74,9 +74,8 @@ Der bei der Einstellung *Second Chance Offer ab Mindestgebot* eingegebene Betrag
 [.collapseBox]
 .Ich erhalte die Fehlermeldung *OAuth2-Konto nicht hinterlegt.* Was muss ich tun?
 --
-Für den Vorgang muss das Plugin xref:maerkte:ebay-OAuth2.adoc#[eBay OAuth2] in deinem System installiert und eingerichtet sein. Das Plugin wird für alle Calls benötigt, die über die neuen APIs von eBay laufen. Diese neuen APIs basieren auf der neuen Authentifizierungsmethode OAuth2 statt auf der bisherigen Auth-n-Auth-Methode. Die neue Authentifizierungsmethode wird für immer mehr essentielle Abläufe benötigt. Deshalb solltest du das Plugin eBay OAuth2 schon bei der Einrichtung installieren.
+Du musst dein eBay-Konto xref:maerkte:ebay-einrichten.adoc#oauth2[für OAuth2 authentifizieren]. OAuth2 wird für alle Calls benötigt, die über die neuen APIs von eBay laufen. Diese neuen APIs basieren auf der neuen Authentifizierungsmethode OAuth2 statt auf der bisherigen Auth-n-Auth-Methode. Die neue Authentifizierungsmethode wird für immer mehr essentielle Abläufe benötigt. Deshalb solltest du dein eBay-Konto bereits bei der Einrichtung in plentymarkets für OAuth2 authentifizieren.
 --
-
 
 [.collapseBox]
 .Ich erhalte die eBay-Fehlermeldung *Ihr wöchentliches Verkaufslimit wurde überschritten* oder den Fehler *#10117: Neuer Verkäufer ohne gespeicherte Kreditkartendaten.* Was muss ich tun?
